...
    <string name="export_save_failed">"Failed to save export"</string>
    <string name="export_save_success">"Export saved successfully"</string>
    <string name="fast_roaming_k" translatable="false">"802.11k"</string>
    <string name="fast_roaming_okc" translatable="false">"OKC"</string>
    <string name="fast_roaming_r" translatable="false">"802.11r"</string>
    <string name="fast_roaming_v" translatable="false">"802.11v"</string>
    <string name="filter_apply">"Apply"</string>
    <string name="filter_close">"Close"</string>
    <string name="filter_reset">"Reset"</string>
    <string name="filter_security_key" translatable="false">"filter_security"</string>
    <string name="filter_security_title">"Security"</string>
    <string name="filter_ssid_hint" translatable="false">"ssid SSID"</string>
    <string name="filter_ssid_key" translatable="false">"filter_ssid"</string>
    <string name="filter_ssid_title">"SSID (case sensitive)"</string>
    <string name="filter_strength_key" translatable="false">"filter_strength"</string>
    <string name="filter_strength_title">"Signal Strength"</string>
    <string name="filter_title">"Filter"</string>
    <string name="filter_wifi_band_key" translatable="false">"filter_wifi_band"</string>
    <string name="filter_wifi_band_title">"Wi-Fi Band"</string>
    <string name="gpl" translatable="false">"<u>GNU General Public License v3.0</u>"</string>
    <string name="gpl_url" translatable="false">"http://www.gnu.org/licenses/gpl-3.0.html"</string>
    <string name="graph_axis_y">"Signal Strength (dBm)"</string>
    <string name="graph_channel_axis_x">"Wi-Fi Channels"</string>
    <string name="graph_maximum_y_key" translatable="false">"graph_maximum_y"</string>
    <string name="graph_maximum_y_summary" translatable="false">"%s"</string>
...
